# mlibc

./: meson.build
abis/vintix/: blkcnt_t.h  blksize_t.h  dev_t.h  errno.h  fcntl.h  fsblkcnt_t.h  fsfilcnt_t.h  gid_t.h  ino_t.h  limits.h  mode_t.h  nlink_t.h  pid_t.h  stat.h  time_t.h  uid_t.h
sysdeps/vintix/: meson.build
sysdeps/vintix/generic/: sysdeps.cpp
sysdeps/vintix/include/abi-bits/: blkcnt_t.h  blksize_t.h  dev_t.h  errno.h  fcntl.h  fsfilcnt_t.h  gid_t.h  ino_t.h  limits.h  mode_t.h  nlink_t.h  pid_t.h  stat.h  time_t.h  uid_t.h
sysdeps/vintix/include/sys/: syscall.h
